2002-09-21  Per Bothner  <per@bothner.com>

	* obj-test.scm:  Add some new tests for srfi-9 (define-record-type).

2002-08-22  Per Bothner  <per@bothner.com>

	* mac-test.scm :  New test cases based on bug report from
	 Stephen L. Peters <portnoy@portnoy.org>.

2002-08-07  Per Bothner  <per@bothner.com>

	* module2.scm (make-pair):  New definition.  This tests a bug
	reported today by Walter C. Pelissero  <walter@pelissero.org>.
	* obj-test.scm:  Add a test that calls make-pair.

2002-08-06  Per Bothner  <per@bothner.com>

	* obj-test.scm:  No longer any expected failure - it now works.

2002-06-11  Per Bothner  <per@bothner.com>

	* MySAXApp.java:  New SAX2 example proram, taken from SAX web site.
	* MySAXApp.expected:  Expected output from MySAXApp.java.
	* arr-test.scm:  New test-suite for SRFI-25, originally written by
	Jussi Piitulainen <jpiitula@ling.helsinki.fi>.
	* Makefile.am:  Add rules for new tests.

2002-03-07  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New regression test.

2002-02-15  Per Bothner  <per@bothner.com>

	* HelloCgiK.out:  Renamed to HelloCgiK.expected.  Needed because
	the suffix .out confuses make when doing make dist.
	* HelloCgiS.out:  Likewise renamed to HelloCgiS.expected.
	* MyFunc.java:  New simple function definition test.
	* MyModule.java:  New simple module test.
	* obj-test.scm:  Add tests using MyFunc and MyModule.
	* HelloCgiX.xql, HelloCgiX.expected:  New cgi-servlet/XQuery test.
	* Makefile.am:  Update as needed.

	* HelloCgiK.krl, HelloCgiK.expected:  Fix inverted logic.

2002-02-14  Per Bothner  <per@bothner.com>

	* HelloCgiK.krl, HelloCgiK.out:  New cgi-servlet/KRL test.
	* HelloCgiS.out, HelloCgiS.scm:  New cgi-servlet/Scheme test.
	* Makefile.am:  Add rules for new tests.

2002-02-11  Per Bothner  <per@bothner.com>

	* scribble.html:  Remnamed to ...
	* scribble.html.in:  New file.
	* Makefile.am (check-scribble):  Use check-scrible link in this